--- a/app/styles/layout/_site-footer.scss
+++ b/app/styles/layout/_site-footer.scss
@@ -1,20 +1,33 @@
 
 .footer {
-  background: $gray;
+  background: $main-blue;
   @include rem(padding, 25px 0 10px);
 
+  h6 {
+    color: $yellow;
+  }
+  p {
+    color:$white;
+  }
+
   a {
-    color: $main-blue;
+    color: $white;
     font-weight: 400;
   }
   ul {
-    margin: 0;
+    margin:  0 ;
     padding: 0;
     list-style: none;
 
+    li {
+      @include rem(padding-bottom, 10px);
+    }
+
     a {
-      color: $darkblue;
-      font-weight: 300;
+      color: $white;
+      font-weight: 400;
+      font-size: 14px;
+      text-decoration: none;
 
       &:hover{
         color: $black;
@@ -26,18 +39,41 @@
 
 .newsletter {
   .btn {
-    border-radius: 0;
-    height: auto;
+    border-radius: 5px 0 0 5px!important;
+    height: 50px;
     line-height: 1;
-    @include rem(padding, 0 15px)
+    background: $star-yellow;
+    @include rem(padding, 0 10px);
+    i {
+      color: $main-blue;
+    }
   }
 
-  input {
+  .input-group .form-control {
+    background: rgba(255,255,255,0.8);
+    border-radius: 0 5px 5px 0;
+    height: 50px;
+    line-height: 50px;
+    color: $main-blue;
+    font-weight: 700;
+    font-size: 14px;
+    max-width: 230px;
+    &::placeholder {
+      color: $main-blue;
+    }
     &:focus,
     &:hover,
     &:active {
       outline:none !important;
       box-shadow: none!important;
     }
+  }
+}
+
+.footer-social {
+  li{
+    display: inline-block;
+    float: right;
+    margin: 20px 0 0 10px;
   }
 }
