--- a/app/styles/module/_box-block.scss
+++ b/app/styles/module/_box-block.scss
@@ -79,3 +79,55 @@ White Box
     }
   }
 }
+
+
+/*
+New Box block
+*/
+.featured-block-gray {
+  background: $light-gray;
+}
+.box-block-into {
+  border-radius: 5px;
+  background: $white;
+  box-shadow: 0 0 8px 0 rgba(124,124,124,0.14);
+  @include transition(all .4s ease);
+
+
+  p {
+    font-weight: 400;
+    @include rem(font-size, $base-font-size - 3px);
+  }
+
+  a {
+    font-weight: 400;
+    @include rem(font-size, $base-font-size - 2px);
+    text-decoration: none;
+
+  }
+
+  .img-height {
+    min-height: 135px;
+  }
+
+  .img-box {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.box-gray {
+  box-shadow: none;
+  background: $light-gray;
+
+  &:hover{
+    background: $white;
+    box-shadow: 0 0 8px 0 rgba(124,124,124,0.14);
+  }
+}
+
+.box-trans {
+  background: none;
+  box-shadow: none;
+  border-radius: 0;
+}
