--- a/app/styles/module/_star-rating.scss
+++ b/app/styles/module/_star-rating.scss
@@ -78,3 +78,16 @@
     vertical-align: middle;
   }
 }
+
+
+/* Home Page */
+
+.homepage {
+  .br-theme-fontawesome-stars .br-widget a {
+    font-size: 16px;
+    &.br-selected:after,
+    &.br-active:after {
+      color: $star-yellow;
+    }
+  }
+}
