--- a/app/styles/utility/_fonts.scss
+++ b/app/styles/utility/_fonts.scss
@@ -7,7 +7,7 @@
 //font-family: 'Nunito', sans-serif;
 
 // Arabic Fonts
-@import url('https://fonts.googleapis.com/css?family=Scheherazade|Tajawal&subset=arabic');
+@import url('https://fonts.googleapis.com/css?family=Tajawal:400,700&subset=arabic');
 //font-family: 'Scheherazade', serif;
 //font-family: 'Tajawal', sans-serif;
 
