--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -16,13 +16,15 @@ $deepgray:  #464a4e;
 $placeholder: #868e96;
 $green : #84D408;
 $greennew: #C4E591;
+$light-gray:#F8F8F8;
+$star-yellow: #FFCA00;
 
 
 /*
   Radius
 */
 
-$br01 : 20px;
+$br01 : 25px;
 $br02 : 5px;
 
 
@@ -31,15 +33,15 @@ Fonts
 */
 $fontrobo : 'Roboto', sans-serif!default;
 $fontnu: 'Nunito', sans-serif!default;
-$fontSch : 'Scheherazade', serif!default;
+$fontSch : 'Tajawal', serif!default;
 $fontTaj : 'Tajawal', sans-serif!default;
 
 
-$base-font-size: 14px;
+$base-font-size: 18px;
 $h1-font-size: 36px;
-$h2-font-size:18px;
-$h3-font-size: 16px;
-$h4-font-size: 20px;
+$h2-font-size: 24px;
+$h3-font-size: 20px;
+$h4-font-size: 18px;
 $h5-font-size: 16px;
 $g-font-size: 18px;
 
