--- a/app/styles/layout/_site-header.scss
+++ b/app/styles/layout/_site-header.scss
@@ -1,6 +1,25 @@
 /*
 Header
 */
+.homepage {
+  .home-header-bg {
+    @extend .clearfix;
+    position: relative;
+    min-height: 640px;
+    background: -webkit-linear-gradient(44deg, $main-blue 0%, $darkblue 100%);
+    background: -o-linear-gradient(44deg, $main-blue 0%, $darkblue 100%);
+    background: linear-gradient(134deg, $main-blue 0%, $darkblue 100%);
+  }
+
+  .cd-main-header {
+    background: transparent;
+  }
+}
+
+
+
+
+
 .no-hero {
   .cd-main-header{
     box-shadow: 0 20px 40px rgba(217,216,216,.35);
