--- a/app/styles/module/_mainnav.scss
+++ b/app/styles/module/_mainnav.scss
@@ -49,11 +49,11 @@
 }
 @media only screen and (min-width: 1024px) {
   .cd-logo {
-    width: 180px;
-    height: 50px;
+    width: 173px;
+    height: 45px;
     position: absolute;
-    z-index: 3;
-    @include rem(margin, 10px 15px 0);
+    z-index: 1;
+    @include rem(margin, 20px 30px 0);
   }
   .cd-logo img {
   }
@@ -83,7 +83,7 @@
   -ms-transform: translateX(-50%) translateY(-50%);
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background-color: $main-blue;
+  background-color: $white;
   -webkit-transition: background-color 0.3s;
   -moz-transition: background-color 0.3s;
   transition: background-color 0.3s;
@@ -96,7 +96,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: $main-blue;
+  background-color: $white;
   /* Force Hardware Acceleration */
   -webkit-transform: translateZ(0);
   -moz-transform: translateZ(0);
@@ -169,7 +169,7 @@
   display: block;
   @include rem(font-size, $base-font-size);
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 700;
   padding: 0 2em 0 1em;
   line-height: 50px;
   color: $white;
@@ -180,7 +180,7 @@
 }
 @media only screen and (min-width: 1024px) {
   .cd-main-nav a, .cd-main-nav input[type="search"] {
-      color: $main-blue;
+      color: $white;
   }
 
 }
@@ -216,7 +216,7 @@
     display: inline-block;
     float: left;
     height: 100%;
-    padding: 1.7em .4em;
+    padding: 1.5em .4em;
   }
   .cd-main-nav a {
     padding: .625em .8em;
@@ -624,6 +624,7 @@ Search Form
     height: 40px;
     width: 40px;
     margin: 1.25em 0 ;
+    top: 0;
     float: right;
     cursor: pointer;
     -webkit-transition: -webkit-transform 0.3s;
@@ -649,7 +650,7 @@ Search Form
     transform: translateX(-50%) translateY(-50%);
     height: 16px;
     width: 16px;
-    color: $main-blue;
+    color: $white;
     font-size: 16px;
     line-height: 1;
   }
@@ -934,18 +935,23 @@ JavaScript Disabled
   }
 
   .btn-menu {
-    a {
-      @include mq(lg2) {
-      border: 1px solid $gray;
-      border-radius: 4px;
-      @include transition(all .4s ease);
 
-      &:hover{
-        opacity: 1;
-        background: $main-blue;
-        color: $white;
+    a {
+      background: none;
+
+      @include mq(lg2) {
+        background: $yellow;
+        border-radius: 25px;
+        color: $main-blue;
+        font-size: 14px;
+        line-height: 1;
+        @include rem(padding, 10px 15px);
+
+        &:hover{
+          background: $darkblue;
+          color: $white;
+        }
       }
-    }
     }
   }
 }
