--- a/app/styles/utility/_lang.scss
+++ b/app/styles/utility/_lang.scss
@@ -7,6 +7,7 @@
     font-family: $fontTaj;
   }
 
+
   ul {
     padding-right: 0;
   }
@@ -182,5 +183,19 @@
 
   .btn {
     line-height: 1;
+  }
+
+  .here-center {
+
+    .row {
+      align-items: center;
+      vertical-align: middle;
+      > .col-md-7 {
+        order: 2;
+      }
+      > .col-md-5{
+        order:1;
+      }
+    }
   }
 }
