--- a/app/styles/module/_star-rating.scss
+++ b/app/styles/module/_star-rating.scss
@@ -82,7 +82,7 @@
 
 /* Home Page */
 
-.homepage {
+.home {
   .br-theme-fontawesome-stars .br-widget a {
     font-size: 16px;
     &.br-selected:after,
