--- a/app/styles/core/_flag.scss
+++ b/app/styles/core/_flag.scss
@@ -5,12 +5,13 @@
 }
 .flag-icon {
   background-size: contain;
-  background-position: 50%;
+  background-position: 0 0;
   background-repeat: no-repeat;
   position: relative;
   display: inline-block;
-  width: 1.33333333em;
+  width: 18px;
   line-height: 1em;
+  top: -1px;
 }
 .flag-icon:before {
   content: "\00a0";
