--- a/app/styles/layout/_site-header.scss
+++ b/app/styles/layout/_site-header.scss
@@ -35,6 +35,10 @@ Header
   -webkit-transition: -webkit-transform 0.3s;
   -moz-transition: -moz-transform 0.3s;
   transition: transform 0.3s;
+  background: -webkit-linear-gradient(44deg, $main-blue 0%, $darkblue 100%);
+  background: -o-linear-gradient(44deg, $main-blue 0%, $darkblue 100%);
+  background: linear-gradient(134deg, $main-blue 0%, $darkblue 100%);
+
 
 }
 .cd-main-header.nav-is-visible {
