--- a/app/styles/module/_vcard.scss
+++ b/app/styles/module/_vcard.scss
@@ -18,7 +18,13 @@ vCards Global
     i{
       @include rem(margin-right, 10px);
       color: $main-blue;
+
+      &:lang(ar) {
+        @include rem(margin-right, 0);
+        @include rem(margin-left, 10px);
+      }
     }
+
   }
 }
 
