update for layout

--- a/app/styles/module/_project-box.scss
+++ b/app/styles/module/_project-box.scss
@@ -1,7 +1,8 @@
 /* Project Boxes */
 
 .project-box {
-  background:$gray;
+  background:$light-gray;
+  border-radius: 5px;
   @include rem(padding,10px 20px 20px);
   @include mq(md){
   };
