--- a/app/styles/module/_vcard.scss
+++ b/app/styles/module/_vcard.scss
@@ -34,6 +34,6 @@ vCard Company Details
 
 .vcard-company{
   h4 {
-    border-bottom: 1px solid $gray;
+    //border-bottom: 1px solid $gray;
   }
 }
