--- a/app/styles/module/_hero.scss
+++ b/app/styles/module/_hero.scss
@@ -77,7 +77,7 @@ Project Listing Hero
 .hero-project {
   min-height:198px;
   @include rem(padding-top, 20px);
-  background: $main-blue url(../images/hero/hero-project-listing.jpg) no-repeat center bottom;
+  background: $main-blue url(../images/hero/hero-project-listing.png) no-repeat center bottom;
   @include mq(sm){
     @include rem(padding-top, 30px);
   }
@@ -98,7 +98,7 @@ Company Listing Hero
 .hero-company {
   min-height:198px;
   @include rem(padding-top, 20px);
-  background: $yellow url(../images/hero/hero-company-listing.jpg) no-repeat center bottom;
+  background: $yellow url(../images/hero/hero-company-listing.png) no-repeat center bottom;
   @include mq(sm){
     @include rem(padding-top, 40px);
   }
