update for Arabic UI

--- a/app/styles/module/_box-block.scss
+++ b/app/styles/module/_box-block.scss
@@ -88,6 +88,7 @@ New Box block
   background: $light-gray;
 }
 .box-block-into {
+  width: 100%;
   border-radius: 5px;
   background: $white;
   box-shadow: 0 0 8px 0 rgba(124,124,124,0.14);
