--- a/app/styles/layout/_site-header.scss
+++ b/app/styles/layout/_site-header.scss
@@ -9,6 +9,7 @@ Header
     background: -webkit-linear-gradient(44deg, $main-blue 0%, $darkblue 100%);
     background: -o-linear-gradient(44deg, $main-blue 0%, $darkblue 100%);
     background: linear-gradient(134deg, $main-blue 0%, $darkblue 100%);
+    width: 100%;
   }
 
   .cd-main-header {
