--- a/app/styles/module/_box-block.scss
+++ b/app/styles/module/_box-block.scss
@@ -132,3 +132,12 @@ New Box block
   box-shadow: none;
   border-radius: 0;
 }
+
+
+/* About Team Box */
+.team-box {
+  h3,
+  p {
+    text-align: right;
+  }
+}
