update Phone hide star & fix js error

--- a/app/styles/module/_company-details-sidebar.scss
+++ b/app/styles/module/_company-details-sidebar.scss
@@ -22,3 +22,14 @@ Company Details Page SideBar
       }
     }
 }
+
+.vcard-list li {
+  span[data-replace]{
+      cursor: pointer;
+      .fa {
+        margin-left: 0px;
+        font-size: 14px;
+        line-height: 20px;
+      }
+  }
+}
