--- a/app/styles/module/_company-details-sidebar.scss
+++ b/app/styles/module/_company-details-sidebar.scss
@@ -25,6 +25,13 @@ Company Details Page SideBar
 
 .vcard-list li {
   span[data-replace]{
+    .btn {
+      color: $yellow;
+      font-size: 14px;
+      line-height: 14px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
       cursor: pointer;
       .fa {
         margin-left: 0px;
