--- a/app/styles/module/_company-box.scss
+++ b/app/styles/module/_company-box.scss
@@ -44,3 +44,45 @@
 .push-left {
   margin-left: 100px;
 }
+
+
+.media-reply {
+  position: relative;
+
+.arrow{
+  width: 0;
+  height: 0;
+  border-radius: 20px;
+  display: inline-block;
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  bottom: -28px;
+  right: 10%;
+
+  &:after{
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+  }
+
+}
+
+.arrow-up{
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 20px solid $gray;
+  &:after{
+   bottom: 2px;
+   border-left: 30px solid transparent;
+   border-right: 30px solid transparent;
+   border-top: 30px solid #fff;
+   left: -30px;
+  }
+}
+
+}
