--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -98,6 +98,7 @@
 @import 'pages/sdreviews';
 @import 'pages/company-edit';
 @import 'pages/callcenter';
+@import 'pages/profile';
 
 
 // OVERRIDING UTILITIES
